<resources>
    <string name="app_name">Homework</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="choose_categories">"Choose category: "</string>
    <string name="ok">"ОК"</string>
    <string name="cancel">"CANCEL"</string>
    <string name="book_s_name">Book\'s name:</string>
    <string name="example_harry_potter">example: Harry Potter</string>
    <string name="author_s">Author(s):</string>
    <string name="example_j_rowling">example: J. Rowling</string>
    <string name="choose_category">Choose category</string>
    <string name="add">Add</string>
    <string name="categories">Category:</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="cover">cover</string>
</resources>
